-- Build information for the package.
name:                xml-typelift
version:             0.0.1
synopsis:            Converting XML Schema to Haskell datatype
description:         Generates datatype declarations and parser/prettyprinter
                     for it from XML Schema.
                     .
                     Addresses handling of large documents with large schemas, like Office Open XML.
homepage:            https://github.com/DataHaskell/xml-typelift
license:             BSD3
license-file:        LICENSE
stability:           stable
author:              Kevin Cheung, Michal Gajda
maintainer:          dataopt@example.com
copyright:           Copyright by Kevin Cheung '2018
category:            Data, Tools
build-type:          Simple
extra-source-files:  README.md changelog.md
cabal-version:       >=1.10
bug-reports:         https://github.com/DataHaskell/xml-typelift/issues
source-repository head
  type:     git
  location: https://github.com/DataHaskell/xml-typelif.git

--library
--  exposed-modules:     Data.XML.TypeLift
--  build-depends:       base                 >=4.3  && <4.12,
--                       containers           >=0.3  && <0.6,
--                       mtl                  >=2.1  && <2.3,
--                       text                 >=1.1  && <1.4,
--                       tagsoup              >=0.14 && <1.0
--  default-language:    Haskell2010

executable playground
  main-is:             playground/ParseXMLSchema.hs
  --other-modules:       Data.XML.TypeLift
  build-depends:       base                 >=4.3  && <4.12,
                       containers           >=0.3  && <0.6,
                       mtl                  >=2.1  && <2.3,
                       text                 >=1.1  && <1.4,
                       tagsoup              >=0.14 && <1.0
  default-language:    Haskell2010
